# gpt-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  snyc.json
.github/workflows/: docker.yaml
gpt_server/: __main__.py  _config.py
gpt_server/routers/: cohere.py  gemini.py  groq.py  openai.py
gpt_server/schemas/: prompt.py
tests/: test_gemini.py  test_groq.py  test_redis.py
