[tool.poetry]
name = "gpt-server"
version = "0.1.0"
description = ""
authors = ["bruce <cnhxunoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiohttp = "^3.9.5"
python-multipart = "^0.0.9"
sse-starlette = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
mypy = "^1.9.0"
flake8 = "^7.0.0"
yapf = "^0.40.2"
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
